--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^5.1.0",
     "groq": "^3.98.0",
     "groq-sdk": "^0.26.0",
+    "jsonrepair": "^3.13.0",
     "multer": "^2.0.1",
     "nodemon": "^3.1.10",
     "xlsx": "^0.18.5"
